# costoflife-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.chglog/: config.yml
.github/workflows/: rust.yml
src/: interaction.rs  ledger.rs  lib.rs  main.rs  utils.rs
testdata/: costoflife.data.txt
