[package]
name = "costoflife"
version = "0.1.0"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
bigdecimal = "0.2.0"
num-bigint = "0.3.1"
anyhow = "1.0.34"
slug = "0.1.4"
lazy_static = "1.4.0"
regex = "1.4.2"
clap = "3.0.0-beta.2"
