[package]
name = "costoflife"
version = "0.2.0"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The CostOf.Life Calculator"
repository = "https://github.com/noandrea/costoflife-rs"


[package.metadata.wasm-pack.profile.release]
# wasm-opt = false
# wasm-opt = ['-Os', '--enable-mutable-globals']
wasm-opt = ['-Os']


[profile.release]
lto = true
opt-level = 's'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = "0.4.19"
bigdecimal = "0.2.0"
num-bigint = "0.3.1"
anyhow = "1.0.35"
slug = "0.1.4"
lazy_static = "1.4.0"
regex = "1.4.2"
clap = "3.0.0-beta.2"
directories = "3.0.1"
dialoguer = "0.7.1"
blake3 = "0.3.7"
wasm-bindgen = "0.2.69"
cast = "0.2.3"
pad = "0.1.6"
