[package]
name = "costoflife"
version = "0.2.3"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The CostOf.Life Calculator"
repository = "https://github.com/noandrea/costoflife-rs"
homepage = "https://thecostof.life"


[package.metadata.wasm-pack.profile.release]
# wasm-opt = false
# wasm-opt = ['-Os', '--enable-mutable-globals']
wasm-opt = ['-Os']


[profile.release]
lto = true
opt-level = 's'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = { version = "0.4.19", features = ["wasmbind"] }
bigdecimal = "0.2.0"
num-bigint = "0.3.1"
slug = "0.1.4"
lazy_static = "1.4.0"
regex = "1.4.2"
clap = "3.0.0-beta.2"
directories = "3.0.1"
dialoguer = "0.7.1"
blake3 = "0.3.7"
wasm-bindgen = "0.2.69"
pad = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"
